--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                       <a
                         href="https://www.amazon.ca/Newooh-Professional-Telescopic-Reusable-Stainless/dp/B08RHW7RH6?crid=3HQH627V872YJ&keywords=magic+tricks&qid=1656354859&sprefix=magic+tricks,aps,310&sr=8-50&linkCode=sl1&tag=burtonernie-20&linkId=a6906719d4bd1c5e2eed74a2a138d4ef&language=en_CA&ref_=as_li_ss_tl"
                       >
-                        Newooh
+                        Telescoping Wand
                       </a>
                     </h3>
                     <h3><input type="submit" value="About" id="btn" /></h3>
