--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="text_img">
-                      <figure><img src="images/pct.png" alt="#" /></figure>
+                      <figure><img src="" alt="#" /></figure>
                     </div>
                   </div>
                 </div>
