--- a/index.html
+++ b/index.html
@@ -121,10 +121,9 @@
                         audience
                       </p>
                       <a href="#products">Buy Now </a>
-                      <a href="contact.html">Contact </a>
+                      <a href="#contact">Contact </a>
                     </div>
                   </div>
-                  
                 </div>
               </div>
             </div>
