--- a/index.html
+++ b/index.html
@@ -105,7 +105,21 @@
     <!-- end header inner -->
     <!-- end header -->
     <!-- banner -->
-
+    <section class="banner_main">
+      <div id="banner1" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="container">
+              <div class="carousel-caption">
+                <div class="row">
+                  <div class="col-md-12"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- end banner -->
     <!-- three_box -->
     <!-- three_box -->
